--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(Roman)
 enable_testing()
 include(GoogleTest)
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/googletest/googletest)
 include_directories(${gtest_SOURCE_DIR} ${gtest_SOURCEDIR}/include)
 add_executable(roman_tests roman.cc test.cc)
