added a directive to force c++ 11 standard

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(Roman)
 enable_testing()
 include(GoogleTest)
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+set(CMAKE_CXX_STANDARD 11)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/googletest/googletest)
 include_directories(${gtest_SOURCE_DIR} ${gtest_SOURCEDIR}/include)
 add_executable(roman_tests roman.cc test.cc)
