changed make to cmake --build in case we change the generator

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ script:
         - mkdir -p build
         - cd build
         - cmake ..
-        - make
+        - cmake --build .
         - ctest
