testing ninja builds in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ compiler:
 script:
         - mkdir -p build
         - cd build
-        - cmake ..
+        - cmake -G Ninja ..
         - cmake --build .
         - ctest
