--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 executors:
   exectr:
     docker:
-      - image: YourGitHubName/YourDockerRepoName:latest
+      - image: glyphrider/roman.cpp:latest
 
 jobs:
   build:
